<resources>
    <string name="app_name">Ideawallah</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Me</string>
    <string name="logout">Logout</string>
    <string name="intro">Welcome to Ideawallah!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="heading_my_ideas">My Ideas</string>
    <string name="hashtag">#</string>
    <string name="no_ideas">Idea bank is empty</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="while_back">A while back</string>
    <string name="hashtags_title">HashTags</string>
    <string name="idea_hint">Genius idea about to be written...</string>
    <string name="new_idea_title">New Idea</string>
    <string name="cancel_idea_message">Exit idea creation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tag_line">one who comes up with ideas</string>
    <string name="tag_line2">Unlock your creativity</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_sent">Reset link sent to your email</string>
    <string name="name">Name:</string>
    <string name="update">Update</string>


</resources>
