<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_tags"
        android:title="@string/hashtag"
        android:icon="@drawable/ic_hash"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/profile"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="3"
        app:showAsAction="never"/>

</menu>