<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerInParent="true"
    tools:context="com.appwallah.ideawallah.SignInActivity">


    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:paddingBottom="35dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <!--
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ideawallah"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"/>
            -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_line"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:textColor="@color/dark_gray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_below="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:visibility="gone"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up" />
        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/sign_in" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotLinkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_buttons"
        android:paddingTop="15dp"
        android:visibility="gone"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_light"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_below="@+id/logo_layout"
        >

        <EditText
            android:id="@+id/field_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <Button
            android:id="@+id/button_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:text="@string/reset_password" />


        <TextView
            android:id="@+id/cancelForgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/holo_blue_light"/>

    </LinearLayout>

</RelativeLayout>